<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.macedos.mytasksfinalproject.ui.form.TaskFormViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginHorizontal="16dp">

        <RelativeLayout
            android:id="@+id/relative_layout_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24px"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/description_icon_arrow"/>

            <ImageView
                android:id="@+id/div_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/linha_3"
                android:layout_marginHorizontal="16dp"
                android:layout_toEndOf="@id/arrow_back"
                android:layout_toRightOf="@id/arrow_back"
                android:contentDescription="@string/description_icon_line"/>

            <TextView
                android:id="@+id/edit_task_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_edit_task_screen"
                android:textSize="24sp"
                android:layout_toEndOf="@id/div_line"
                android:layout_toRightOf="@id/div_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_edit_task_screen"
                android:layout_below="@id/edit_task_screen"
                android:layout_toEndOf="@id/div_line"
                android:layout_toRightOf="@id/div_line" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout_edit_task"
            app:layout_constraintBottom_toTopOf="@id/text_description_edit_task">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}"
                android:hint="@string/title_in_task_screen"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_description_edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_edit_task">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_description_text_field"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:inputType="textWebEditText"
                android:text="@={viewModel.description}"
                android:hint="@string/description_in_task_screen"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_description_edit_task"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:text="@string/button_save_tasks"
            android:gravity="center"
            android:enabled="@{viewModel.formValid}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/button_and_action_color"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>