<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.macedos.mytasksfinalproject.ui.tab.TaskViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color_app"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_task"
            android:visibility="@{viewModel.taskList.size() == 0 ? View.GONE : View.VISIBLE}"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_recycler_view"
            android:visibility="@{viewModel.taskList.size() == 0 ? View.VISIBLE : View.GONE}"
            >

            <ImageView
                android:id="@+id/image_view_void_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_void_screen"
                android:contentDescription="@string/description_image_void_screen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_nothings_here"
                android:layout_marginTop="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/empty_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_things_todo"
                android:textSize="14sp"
                android:gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:contentDescription="@string/button_add_tasks"
            android:text="@string/button_add_tasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="@color/button_and_action_color"
            app:iconTint="@color/white"
            app:icon="@drawable/ic_adicionar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>