<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_tab"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_tabbar"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_in_tabbar"
                    android:layout_marginHorizontal="12dp"
                    android:layout_gravity="center">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab_item_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_tabbar"
                        />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab_item_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in_progress_tabbar"/>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tab_item_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/done_tabbar"/>

                </com.google.android.material.tabs.TabLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/my_view_pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_tab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>