<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.macedos.mytasksfinalproject.ui.details.TaskDetailsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:id="@+id/relative_layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center|start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_task_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/div_line"
                android:layout_toLeftOf="@id/div_line"
                android:text="@{viewModel.title}"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subtitle_screen_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/div_line"
                android:layout_toLeftOf="@id/div_line"
                android:text="A fazer"
                android:layout_below="@id/title_task_screen"/>

            <ImageView
                android:id="@+id/div_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/linha_3"
                android:layout_marginHorizontal="24dp"
                android:layout_toLeftOf="@id/edit_icon"
                android:contentDescription="@string/description_icon_line"
                android:layout_toStartOf="@id/edit_icon" />


            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_editar"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/description_icon_arrow"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@={viewModel.description}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout_details"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_in_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button_delete_task"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColor="@color/button_and_action_color"
                android:contentDescription="@string/button_add_tasks"
                android:text="@string/button_delete_tasks"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:icon="@drawable/ic_excluir"
                app:iconTint = "@color/button_and_action_color"
                app:iconPadding="16dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:contentDescription="@string/button_add_tasks"
                android:text="@string/button_start_tasks"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:backgroundTint="@color/button_and_action_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>